Fixed Spacing

--- a/CSS/PortFolio_CSS.css
+++ b/CSS/PortFolio_CSS.css
@@ -245,7 +245,7 @@ body.fade-out {
 	float: left;  
 	width: 50%; /* This ensures one column takes up half the page width */
 	padding: 10px; 
-	padding-top: 1%; /* This ensures there is space between the top of the column and our headings */
+	padding-top: 1.9%; /* This ensures there is space between the top of the column and our headings */
 	height: 425px; /* This sets the height of our column at 425 pixels - if you change the text within the columns, you will need to adjust the column heights accordingly */
 	background-color: #d0e7ff;
 }
@@ -257,7 +257,7 @@ body.fade-out {
 }
 
 #Form {
-	height: 425px;
+	height: 400px;
 }
 
 /* Heading 1 elements */
